# K-Term

./: CMakeLists.txt  Makefile  README.md  VOIP_PLAN.md  benchmark_net_alloc  font_data.h  irc_plan.md  kt_composite_sit.h  kt_gateway.h  kt_io_sit.h  kt_net.h  kt_ops.h  kt_parser.h  kt_render_sit.h  kt_serialize.h  kt_voice.h  kt_voip.h  kterm.h  kterm.ti  kterm_api.h  kterm_impl.h  net_tests  output.txt  output_grid.txt  regis_exec.txt  situation.h  speedtest_client  ssh_client  ssh_client.c  telnet_client.c  terminfo_data.h  test_attributes  test_banner  test_debug  test_forms  test_gateway  test_gateway_grid  test_gateway_grid_shapes  test_gateway_suite  test_grid  (+12 more)
.github/workflows/: fuzzing.yml
doc/: DEC_COMPLIANCE_REVIEW.md  NETWORKING_GAPS.md  VOIP_PLAN.md  VOIP_ROADMAP.md  gt_analysis.md  kt_net.md  kterm.md  network_diagnostics.md  op_queue_final.md  rawdump_plan.md  situation_api.md  updatelog.md
example/: console.c  grid_overlay.c  net_client.c  net_diag_example.c  net_server.c  situation.h  situation_api.md  speedtest_client.c  ssh_skeleton.c  ssh_sodium.c  telnet_client.c
shaders/: terminal.comp
tests/: benchmark_banner.c  benchmark_diagnostics.c  benchmark_fonts.c  benchmark_net_alloc.c  compile_all_tests.bat  compile_all_tests_certified.bat  libfuzzer_target.c  mock_pcap.c  mock_situation.h  mock_ssh_server.py  net_tests.c  repro_vulnerability.c  run_all_tests.bat  run_all_tests_certified.bat  run_diagnostics_test.sh  stress_interleaved_io.c  stress_op_queue.c  stress_resize.c  stress_tests.c  test_api_consumer.c  test_attributes_modes_suite.c  test_buffer_hardening.c  test_compositor.c  test_dec_features.c  test_decrqss.c  test_decsca.c  test_direct_input.c  test_dissectors.c  test_event_overflow.c  test_forms_skip.c  test_fuzz_kitty.c  test_fuzz_suite.c  test_gateway_case.c  test_gateway_direct_input.c  test_gateway_extensions.c  test_gateway_grid.c  test_gateway_grid_features.c  test_gateway_grid_shapes.c  test_gateway_relative.c  test_gateway_reset_graphics.c  (+61 more)
